--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
 			</article>
 			<div class="clear"></div>
 		</section>
+		<section>
+			<article>
+				<div class="sectionTitle">
+					<h1>Hobbies</h1>
+				</div>
+				
+				<div class="sectionContent">
+					<p>sahiuhdiuhsaiuhiuhiufhdshfhisaf</p>
+				</div>
+			</article>
+			<div class="clear"></div>
+		</section>
 	</div>
 </div>
 </body>
