--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <title>Curriculum Vitae</title>
-
+	
 <meta name="viewport" content="width=device-width"/>
 <meta name="description" content="Curriculum Vitae"/>
 <meta charset="UTF-8"> 
 <link type="text/css" rel="stylesheet" href="style.css">
 <link type="text/css" rel="stylesheet" href="fonte.css">
-<!--link href='http://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'-->
+	
 </head>
 <body id="top">
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="headshot" class="quickFade">
-			<img src="headshot.jpg" alt="Alex" />
+			<img src="headshot2.jpg" alt="Alex" />
 		</div>
 		
 		<div id="name">
