--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="headshot" class="quickFade">
-			<img src="headshot.jpeg" alt="Alex" />
+			<img src="headshot.jpg" alt="Alex" />
 		</div>
 		
 		<div id="name">
