--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<ul>
 				<li>email: <a href="mailto:afmr@mail.com" target="_blank">afmr@mail.com</a></li>
 				<li>web: <a href="http://www.workndtravelbr.com">www.workndtravelbr.com</a></li>
-				<li>tel: 0359999-9999</li>
+				<li>tel: 035992741736</li>
 				<li>Lkd: <a href="https://www.linkedin.com/in/alexandre-faria-mattar-1a05a5182">Linkedin</a></li>
 			</ul>
 		</div>
