--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				</div>
 				
 				<div class="sectionContent">
-					<p>sahiuhdiuhsaiuhiuhiufhdshfhisaf</p>
+					<p>Viajar</p><br><p>Mochilao</p><br><p>Trabalho Voluntario</p><br><p>Freela DevWeb</p><br><p>Skate/Surf</p>
 				</div>
 			</article>
 			<div class="clear"></div>
