--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
 			
 			<div class="sectionContent">
 				<article>
-					<h2>Job Title at Company</h2>
-					<p class="subDetails">April 2011 - Present</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ultricies massa et erat luctus hendrerit. Curabitur non consequat enim. Vestibulum bibendum mattis dignissim. Proin id sapien quis libero interdum porttitor.</p>
+					<h2>Auxiliar Administativo</h2>
+					<p class="subDetails">2015 - 1 ano</p>
+					<p>Manter a organização dos setores operacionais da empresa.</p>
+					<p>Empresa: Ghee Banqueteria</p>
 				</article>
 				
 				<article>
