--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<li>web: <a href="http://www.workndtravelbr.com">www.workndtravelbr.com</a></li>
 				<li>tel: 035992741736</li>
 				<li>Lkd: <a href="https://www.linkedin.com/in/alexandre-faria-mattar-1a05a5182">Linkedin</a></li>
+				<li>IG: <a href="https://instagram.com/workndtravelbr" target="_blank">@workndtravelbr</a></li>
 			</ul>
 		</div>
 		<div class="clear"></div>
